--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "stravarun",
+  "version": "1.0.0",
   "type": "module",
   "devDependencies": {
-    "@vercel/edge": "^0.6.1"
+    "@vercel/edge": "^0.6.1",
+    "typescript": "^5.3.3"
   }
 }
