--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "stravarun",
   "version": "1.0.0",
   "type": "module",
+  "dependencies": {
+    "@vercel/node": "^3.0.0"
+  },
   "devDependencies": {
     "typescript": "^5.3.3"
   }
